--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div class="content" data-aos="fade-left" data-aos-delay="600">
         <span>Apa itu</span>
         <h3>SIDINDA PBB?</h3>
-        <p>SIDINDA PBB yang merupakan singkatan dari "Deteksi Dini Pendataan Pajak Bumi dan Bangunan" adalah Inovasi Pelayanan Publik yang digagas oleh Ibu Dhynda Anggyawaty selaku Kepala Seksi Pemberdayaan Masyarakat dan Pembangunan Kelurahan Jatisari dan dimentori oleh Bapak	Agus Sucipto selaku Lurah Jatisari Kecamatan Jatiasih Kota Bekasi.</p>
+        <p>SIDINDA PBB yang merupakan singkatan dari "Deteksi Dini Pendataan Pajak Bumi dan Bangunan" adalah Inovasi Pelayanan Publik yang digagas oleh Ibu Dhynda Anggyawaty selaku Kepala Seksi Pemberdayaan Masyarakat dan Pembangunan Kelurahan Jatisari dan dimentori oleh Bapak Agus Sucipto selaku Lurah Jatisari Kecamatan Jatiasih Kota Bekasi untuk membantu melayani masyarakat terkait Pajak Bumi dan Bangunannya agar terwujudnya pelayanan yang profesional, cepat, tepat, dan akuntabel.</p>
         <a href="#" class="btn">Read more</a>
     </div>
 </section>
@@ -110,8 +110,8 @@
             </div>
             <div class="content">
                 <h3>Permasalahan PBB</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit iure soluta ex animi eaque veniam est id ratione? A exercitationem sunt modi suscipit minus illum dolor fugit magnam similique sed.</p>
-            <a href="#">Read More <i class="fas fa-angle-right"></i></a>
+                <p>Menu ini digunakan oleh petugas dalam pengadministrasian pelayanan terkait permasalahan PBB masyarakat Kelurahan Jatisari.</p>
+            <a href="#">Masuk <i class="fas fa-angle-right"></i></a>
             </div>
         </div>
         <div class="box" data-aos="fade-up" data-aos-delay="300">
@@ -120,8 +120,8 @@
             </div>
             <div class="content">
                 <h3>Verifikasi DHKP</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit iure soluta ex animi eaque veniam est id ratione? A exercitationem sunt modi suscipit minus illum dolor fugit magnam similique sed.</p>
-            <a href="#">Read More <i class="fas fa-angle-right"></i></a>
+                <p>Menu ini digunakan oleh petugas dalam melakukan verifikasi DHKP PBB Kelurahan Jatisari agar terwujudnya data DHKP yang valid.</p>
+            <a href="#">Masuk <i class="fas fa-angle-right"></i></a>
             </div>
         </div>
         <div class="box" data-aos="fade-up" data-aos-delay="450">
@@ -130,8 +130,8 @@
             </div>
             <div class="content">
                 <h3>Operasi Sisir</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit iure soluta ex animi eaque veniam est id ratione? A exercitationem sunt modi suscipit minus illum dolor fugit magnam similique sed.</p>
-            <a href="#">Read More <i class="fas fa-angle-right"></i></a>
+                <p>Menu ini digunakan oleh petugas dalam mengadministrasikan pelaksanaan Operasi Sisir PBB Kelurahan Jatisari bekerjasama dengan Pihak Bank.</p>
+            <a href="#">Masuk <i class="fas fa-angle-right"></i></a>
             </div>
         </div>
         <div class="box" data-aos="fade-up" data-aos-delay="600">
@@ -140,8 +140,8 @@
             </div>
             <div class="content">
                 <h3>Distribusi SPPT</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit iure soluta ex animi eaque veniam est id ratione? A exercitationem sunt modi suscipit minus illum dolor fugit magnam similique sed.</p>
-            <a href="#">Read More <i class="fas fa-angle-right"></i></a>
+                <p>Menu ini digunakan oleh petugas dalam melakukan pendistribusian SPPT PBB Kelurahan Jatisari agar laporan penyampaian SPPT PBB dapat lebih cepat tersampaikan.</p>
+            <a href="#">Masuk <i class="fas fa-angle-right"></i></a>
             </div>
         </div>
         <div class="box" data-aos="fade-up" data-aos-delay="750">
@@ -150,8 +150,8 @@
             </div>
             <div class="content">
                 <h3>Jawab Konsultasi</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit iure soluta ex animi eaque veniam est id ratione? A exercitationem sunt modi suscipit minus illum dolor fugit magnam similique sed.</p>
-            <a href="#">Read More <i class="fas fa-angle-right"></i></a>
+                <p>Menu ini digunakan oleh petugas dalam menjawab konsultasi PBB yang disampaikan masyarakat Kelurahan Jatisari secara online agar terwujudnya pelayanan yang lebih cepat kapan saja dan dimana saja.</p>
+            <a href="#">Masuk <i class="fas fa-angle-right"></i></a>
             </div>
         </div>
         
@@ -170,23 +170,23 @@
         <div class="box" data-aos="fade-up-right" data-aos-delay="150">
             <i class="fas fa-globe"></i>
             <h3>Fasilitasi</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim velit tenetur modi omnis tempora inventore blanditiis veniam quasi sequi, illum hic! Harum enim eligendi amet? Exercitationem asperiores optio ex ipsam.</p>
+            <p>Layani masyarakat secara optimal baik secara daring maupun luring melalui aplikasi SIDINDA PBB Kelurahan Jaisari Kecamatan Jatiasih Kota Bekasi.</p>
         </div>
         <div class="box" data-aos="fade-up" data-aos-delay="150">
             <i class="fas fa-hiking"></i>
             <h3>Visitasi</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim velit tenetur modi omnis tempora inventore blanditiis veniam quasi sequi, illum hic! Harum enim eligendi amet? Exercitationem asperiores optio ex ipsam.</p>
+            <p>Lakukan kegiatan kunjungan secara berkala dan berkelanjutan dalam rangka melakukan monitoring, jemput bola pelayanan, dan himbauan penagihan terhadap masyarakat yang memiliki permasalahan maupun yang memiliki piutang PBBnya.</p>
         </div>
         
         <div class="box" data-aos="fade-up" data-aos-delay="150">
             <i class="fas fa-wallet"></i>
             <h3>Himbauan Pembayaran</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim velit tenetur modi omnis tempora inventore blanditiis veniam quasi sequi, illum hic! Harum enim eligendi amet? Exercitationem asperiores optio ex ipsam.</p>
+            <p>Lakukan war-war, distribusi surat edaran dan surat himabauan pembayaran, serta sosialisasi setiap kebijakan terkait pembayaran PBB kepada masyarakat melalui berbagai kanal media dan metode untuk mengoptimalkan prosentase dan peringkat realisasi capaian PBB.</p>
         </div>
         <div class="box" data-aos="fade-up-left" data-aos-delay="150">
             <i class="fas fa-headset"></i>
             <h3>Berikan Solusi</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim velit tenetur modi omnis tempora inventore blanditiis veniam quasi sequi, illum hic! Harum enim eligendi amet? Exercitationem asperiores optio ex ipsam.</p>
+            <p>Berikan solusi terbaik baik secara daring maupun luring kepada seluruh masyarakat Kelurahan Jaisari Kecamatan Jatiasih Kota Bekasi melalui aplikasi SIDINDA PBB agar mewujudkan pelayanan prima terhadap masyarakat.</p>
         </div>
     </div>
 </section>
