--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
 
     <form action="">
         <div class="inputBox" data-aos="zoom-in" data-aos-delay="150">
-            <span>where to?</span>
+            <span>Kelurahan</span>
             <input type="text" value="" placeholder="place now">
         </div>
         <div class="inputBox" data-aos="zoom-in" data-aos-delay="300">
-            <span>when</span>
+            <span>Tahun</span>
             <input type="date" value="" placeholder="dd-mm-yyyy">
         </div>
         <div class="inputBox" data-aos="zoom-in" data-aos-delay="450">
-            <span>How Many?</span>
+            <span>NOP</span>
             <input type="number" value="" placeholder="number of travelers">
         </div>
         <input type="submit" value="find now" class="btn" data-aos="zoom-in" data-aos-delay="600"  >
@@ -203,7 +203,7 @@
     <div class="box-container">
         <div class="box" data-aos="fade-up" data-aos-delay="150">
             <img src="images/gallery-img-1.jpg" alt="">
-            <span>Travel Spot</span>
+            <span>Dukungan Kepala Badan Pendapatan Daerah</span>
             <h3>Iceland</h3>
         </div>
         <div class="box" data-aos="fade-up" data-aos-delay="300">
@@ -277,7 +277,7 @@
          <img src="images/blog-1.jpg" alt="">
         </div>
       <div class="content">
-          <a href="#" class="link">Dr. Tri Adhianto Tjahyono</a>
+          <a href="#" class="link">Drs. HUDI WIJAYANTO, M.Si.</a>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium provident, autem repellat nesciunt vero facere debitis placeat, aliquid accusantium modi tempora nisi? Esse facilis omnis labore nemo animi placeat voluptas.</p>
           <div class="icon">
               <a href="#"><i class="fa fa-clock"> 21 September 2023</i></a>
