--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
     <div class="content">
         <span data-aos="fade-up" data-aos-delay="150">SIDINDA PBB</span>
         <h3 data-aos="fade-up" data-aos-delay="300">Kelurahan Jatisari</h3>
-        <p data-aos="fade-up" data-aos-delay="450">Apakah memiliki pertanyaan terkait PBB kamu?</p>
-        <a href="#" class="btn" data-aos="fade-up" data-aos-delay="600">Tanyakan Sekarang!</a>
+        <p data-aos="fade-up" data-aos-delay="450">Pilih Akun Pengguna Kamu!</p>
+        <a href="#" class="btn" data-aos="fade-up" data-aos-delay="600">  Petugas  </a>
+		<a href="#" class="btn" data-aos="fade-up" data-aos-delay="600">Masyarakat</a>
     </div>
 </section>
 <!---home section ends -->
@@ -117,13 +118,30 @@
 <!-- About Section start -->
 <section class="about" id="about">
     <div class="video-container" data-aos="fade-right" data-aos-delay="300">
-        <video src="images/about-vid-1.mp4"></video>
+        <image src="images/Untitled-2.png" id="video-display"></image>
     <div class="controls">
-        <span class="control-btn" data-src="images/about-vid-1.mp4"></span>
-        <span class="control-btn" data-src="images/about-vid-2.mp4"></span>
-        <span class="control-btn" data-src="images/about-vid-3.mp4"></span>
+        <span class="control-btn" onclick="changeVideo('images/Untitled-2.png')"></span>
+        <span class="control-btn" onclick="changeVideo('images/Untitled-3.png')"></span>
+        <span class="control-btn" onclick="changeVideo('images/Untitled-4 (1).png')"></span>
     </div>
     </div>
+<script>
+    var images = ['images/Untitled-2.png', 'images/Untitled-3.png', 'Untitled-4 (1).png'];
+    var currentIndex = 0;
+
+    function changeVideo(newSrc) {
+        document.getElementById('video-display').src = newSrc;
+        clearInterval(autoChange); // Stop auto change when manual change occurs
+    }
+
+    function autoChangeVideo() {
+        currentIndex = (currentIndex + 1) % images.length;
+        document.getElementById('video-display').src = images[currentIndex];
+    }
+
+    var autoChange = setInterval(autoChangeVideo, 5000); // Change every 5 seconds
+</script>
+
 
     <div class="content" data-aos="fade-left" data-aos-delay="600">
         <span>Apa itu</span>
