--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
     <div class="controls">
         <span class="control-btn" onclick="changeVideo('images/Untitled-2.png')"></span>
         <span class="control-btn" onclick="changeVideo('images/Untitled-3.png')"></span>
-        <span class="control-btn" onclick="changeVideo('images/Untitled-4 (1).png')"></span>
+        <span class="control-btn" onclick="changeVideo('images/Untitled-1.png')"></span>
     </div>
     </div>
 <script>
-    var images = ['images/Untitled-2.png', 'images/Untitled-3.png', 'Untitled-4 (1).png'];
+    var images = ['images/Untitled-2.png', 'images/Untitled-3.png', 'images/Untitled-1.png'];
     var currentIndex = 0;
 
     function changeVideo(newSrc) {
@@ -139,7 +139,7 @@
         document.getElementById('video-display').src = images[currentIndex];
     }
 
-    var autoChange = setInterval(autoChangeVideo, 5000); // Change every 5 seconds
+    var autoChange = setInterval(autoChangeVideo, 3000); // Change every 3 seconds
 </script>
 
 
