--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <span data-aos="fade-up" data-aos-delay="150">SIDINDA PBB</span>
         <h3 data-aos="fade-up" data-aos-delay="300">Kelurahan Jatisari</h3>
         <p data-aos="fade-up" data-aos-delay="450">Pilih Akun Pengguna Kamu!</p>
-        <a href="#" class="btn" data-aos="fade-up" data-aos-delay="600">  Petugas  </a>
+        <a href="https://sidinda.github.io/sidindapetugas/" class="btn" data-aos="fade-up" data-aos-delay="600">  Petugas  </a>
 		<a href="https://sidinda.github.io/sidindamasyarakat/" class="btn" data-aos="fade-up" data-aos-delay="600">Masyarakat</a>
     </div>
 </section>
