--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <a data-aos="zoom-in-left" data-aos-delay="450" href="#about">Tentang</a>
         <a data-aos="zoom-in-left" data-aos-delay="600" href="#destination">Layanan</a>
         <a data-aos="zoom-in-left" data-aos-delay="750" href="#services">Langkah</a>
-        <a data-aos="zoom-in-left" data-aos-delay="900" href="#gallery">Galeri</a>
-        <a data-aos="zoom-in-left" data-aos-delay="1150" href="#blogs">Dukungan</a>
+        <a data-aos="zoom-in-left" data-aos-delay="900" href="#gallery">Dukungan</a>
+        <a data-aos="zoom-in-left" data-aos-delay="1150" href="#blogs">Tim</a>
     </nav>
     
     <a data-aos="zoom-in-left" data-aos-delay="1300" href="#book-form" class="btn">Cek PBB</a>
@@ -163,52 +163,52 @@
     <div class="box-container">
         <div class="box" data-aos="fade-up" data-aos-delay="150">
             <div class="image">
-                <img src="images/des-1.jpg" alt="">
+                <img src="images/des-1.jpeg" alt="">
             </div>
             <div class="content">
                 <h3>Permasalahan PBB</h3>
                 <p>Menu ini digunakan oleh petugas dalam pengadministrasian pelayanan terkait permasalahan PBB masyarakat Kelurahan Jatisari.</p>
-            <a href="#">Masuk <i class="fas fa-angle-right"></i></a>
+            <a href="https://sidinda.github.io/sidindapetugas/">Masuk <i class="fas fa-angle-right"></i></a>
             </div>
         </div>
         <div class="box" data-aos="fade-up" data-aos-delay="300">
             <div class="image">
-                <img src="images/des-2.jpg" alt="">
+                <img src="images/des-2.jpeg" alt="">
             </div>
             <div class="content">
                 <h3>Verifikasi DHKP</h3>
                 <p>Menu ini digunakan oleh petugas dalam melakukan verifikasi DHKP PBB Kelurahan Jatisari agar terwujudnya data DHKP yang valid.</p>
-            <a href="#">Masuk <i class="fas fa-angle-right"></i></a>
+            <a href="https://sidinda.github.io/sidindapetugas/">Masuk <i class="fas fa-angle-right"></i></a>
             </div>
         </div>
         <div class="box" data-aos="fade-up" data-aos-delay="450">
             <div class="image">
-                <img src="images/des-3.jpg" alt="">
+                <img src="images/des-3.jpeg" alt="">
             </div>
             <div class="content">
                 <h3>Operasi Sisir</h3>
                 <p>Menu ini digunakan oleh petugas dalam mengadministrasikan pelaksanaan Operasi Sisir PBB Kelurahan Jatisari bekerjasama dengan Pihak Bank.</p>
-            <a href="#">Masuk <i class="fas fa-angle-right"></i></a>
+            <a href="https://sidinda.github.io/sidindapetugas/">Masuk <i class="fas fa-angle-right"></i></a>
             </div>
         </div>
         <div class="box" data-aos="fade-up" data-aos-delay="600">
             <div class="image">
-                <img src="images/des-4.jpg" alt="">
+                <img src="images/des-4.jpeg" alt="">
             </div>
             <div class="content">
                 <h3>Distribusi SPPT</h3>
                 <p>Menu ini digunakan oleh petugas dalam melakukan pendistribusian SPPT PBB Kelurahan Jatisari agar laporan penyampaian SPPT PBB dapat lebih cepat tersampaikan.</p>
-            <a href="#">Masuk <i class="fas fa-angle-right"></i></a>
+            <a href="https://sidinda.github.io/sidindapetugas/">Masuk <i class="fas fa-angle-right"></i></a>
             </div>
         </div>
         <div class="box" data-aos="fade-up" data-aos-delay="750">
             <div class="image">
-                <img src="images/des-5.jpg" alt="">
+                <img src="images/des-5.jpeg" alt="">
             </div>
             <div class="content">
                 <h3>Jawab Konsultasi</h3>
                 <p>Menu ini digunakan oleh petugas dalam menjawab konsultasi PBB yang disampaikan masyarakat Kelurahan Jatisari secara online agar terwujudnya pelayanan yang lebih cepat kapan saja dan dimana saja.</p>
-            <a href="#">Masuk <i class="fas fa-angle-right"></i></a>
+            <a href="https://sidinda.github.io/sidindapetugas/">Masuk <i class="fas fa-angle-right"></i></a>
             </div>
         </div>
         
@@ -253,37 +253,38 @@
 
 <section class="gallery" id="gallery">
     <div class="heading">
-        <span>Galeri</span>
-        <h1>Pelayanan PBB</h1>
+        <span>Dukungan</span>
+        <h1>Stakeholder</h1>
     </div>
 
     <div class="box-container">
         <div class="box" data-aos="fade-up" data-aos-delay="150">
-            <img src="images/gallery-img-1.jpg" alt="">
+            <img src="images/gallery-img-1.jpeg" alt="">
             <span>Dukungan Kepala Badan Pendapatan Daerah</span>
-            <h3>Iceland</h3>
+            <h3>Dr. ARIEF MAULANA, S.T., M.M.</h3>
         </div>
         <div class="box" data-aos="fade-up" data-aos-delay="300">
-            <img src="images/gallery-img-2.jpg" alt="">
-            <span>Travel Spot</span>
-            <h3>Greenland</h3>
+            <img src="images/gallery-img-2.jpeg" alt="">
+            <span>Dukungan Kepala Diskominfostandi</span>
+            <h3>Drs. HUDI WIJAYANTO, M.Si.</h3>
+			
         </div>
         <div class="box" data-aos="fade-up" data-aos-delay="400">
-            <img src="images/gallery-img-3.jpg" alt="">
-            <span>Travel Spot</span>
-            <h3>Alaska</h3>
+            <img src="images/gallery-img-3.jpeg" alt="">
+            <span>Dukungan Camat Jatiasih</span>
+            <h3>ASHARI, S.T., M.M.</h3>
         </div>
 
 
         <div class="box" data-aos="fade-up" data-aos-delay="300">
             <img src="images/gallery-img-4.jpg" alt="">
-            <span>Travel Spot</span>
-            <h3>Thailand</h3>
+            <span>Dukungan Kepala Diskominfostandi</span>
+            <h3>Drs. HUDI WIJAYANTO, M.Si.</h3>
         </div>
         <div class="box" data-aos="fade-up" data-aos-delay="700">
-            <img src="images/gallery-img-5.jpg" alt="">
-            <span>Travel Spot</span>
-            <h3>Brazil</h3>
+            <img src="images/gallery-img-5.jpeg" alt="">
+            <span>Sekretaris Kecamatan Jatiasih</span>
+            <h3>IROB RUHYADI, S.Pd., MM.</h3>
         </div>
         <div class="box" data-aos="fade-up" data-aos-delay="500">
             <img src="images/gallery-img-6.jpg" alt="">
@@ -390,8 +391,8 @@
             <a href="#home" class="links"><i class="fas fa-arrow-right"></i>Beranda</a>
             <a href="#about" class="links"><i class="fas fa-arrow-right"></i>Tentang</a>
             <a href="#services" class="links"><i class="fas fa-arrow-right"></i>Layanan</a>
-            <a href="#gallery" class="links"><i class="fas fa-arrow-right"></i>Galeri</a>
-            <a href="#blogs" class="links"><i class="fas fa-arrow-right"></i>Dukungan</a>
+            <a href="#gallery" class="links"><i class="fas fa-arrow-right"></i>Dukungan</a>
+            <a href="#blogs" class="links"><i class="fas fa-arrow-right"></i>Tim</a>
         </div>
         <div class="box">
             <p><i class="fas fa-map"></i>Jatisari, Jatiasih, Kota Bekasi</p>
