--- a/index.html
+++ b/index.html
@@ -274,34 +274,32 @@
             <span>Dukungan Camat Jatiasih</span>
             <h3>ASHARI, S.T., M.M.</h3>
         </div>
-
-
         <div class="box" data-aos="fade-up" data-aos-delay="300">
-            <img src="images/gallery-img-4.jpg" alt="">
-            <span>Dukungan Kepala Diskominfostandi</span>
-            <h3>Drs. HUDI WIJAYANTO, M.Si.</h3>
+            <img src="images/gallery-img-4.jpeg" alt="">
+            <span>Dukungan Sekretaris Bapenda</span>
+            <h3>RIDWAN AS S.H.,M.Si.</h3>
         </div>
         <div class="box" data-aos="fade-up" data-aos-delay="700">
             <img src="images/gallery-img-5.jpeg" alt="">
-            <span>Sekretaris Kecamatan Jatiasih</span>
+            <span>Dukungan Sekretaris Kecamatan Jatiasih</span>
             <h3>IROB RUHYADI, S.Pd., MM.</h3>
         </div>
         <div class="box" data-aos="fade-up" data-aos-delay="500">
-            <img src="images/gallery-img-6.jpg" alt="">
-            <span>Travel Spot</span>
-            <h3>Maldrive</h3>
+            <img src="images/gallery-img-6.jpeg" alt="">
+            <span>Dukungan Kepala Seksi Pemerintahan Kecamatan Jatiasih</span>
+            <h3>FIKKI DZULFIQAR KHAIDIR SULONG, S.H.</h3>
         </div>
 
 
         <div class="box" data-aos="fade-up" data-aos-delay="450">
-            <img src="images/gallery-img-7.jpg" alt="">
-            <span>Travel Spot</span>
-            <h3>Iceland</h3>
+            <img src="images/gallery-img-7.jpeg" alt="">
+            <span>Dukungan Lurah Jatisari</span>
+            <h3>Agus Sucipto, S.KM.</h3>
         </div>
         <div class="box" data-aos="fade-up" data-aos-delay="900">
-            <img src="images/gallery-img-7.jpg" alt="">
-            <span>Travel Spot</span>
-            <h3>Alaska</h3>
+            <img src="images/gallery-img-8.jpeg" alt="">
+            <span>Dukungan Kepala UPTD Pajak Dan Retribusi Daerah Jatiasih</span>
+            <h3>SAAN HARYADI S.IP., M.M.</h3>
         </div>
     </div>
 
