--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 <section class="services" id="services">
     <div class="heading">
         <span>Langkah-langkah</span>
-        <h1>Pendataan dan Penagihan PBB</h1>
+        <h1>Pendataan dan Pelayanan PBB</h1>
     </div>
     <div class="box-container">
         <div class="box" data-aos="fade-up-right" data-aos-delay="150">
@@ -330,10 +330,10 @@
 <div class="box-container">
     <div class="box">
         <div class="image">
-         <img src="images/blog-1.jpg" alt="">
+         <img src="images/raden (1).png" alt="">
         </div>
       <div class="content">
-          <a href="#" class="link">Drs. HUDI WIJAYANTO, M.Si.</a>
+          <a href="#" class="link">Raden Gani Muhammad, S.H., M.AP.</a>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium provident, autem repellat nesciunt vero facere debitis placeat, aliquid accusantium modi tempora nisi? Esse facilis omnis labore nemo animi placeat voluptas.</p>
           <div class="icon">
               <a href="#"><i class="fa fa-clock"> 21 September 2023</i></a>
@@ -343,10 +343,10 @@
      </div>
      <div class="box">
         <div class="image">
-         <img src="images/blog-2.jpg" alt="">
+         <img src="images/raden (3).png" alt="">
         </div>
         <div class="content">
-         <a href="#" class="link">Ashari, S.T., M.M.</a>
+         <a href="#" class="link">Agus Sucipto, S.KM.</a>
          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium provident, autem repellat nesciunt vero facere debitis placeat, aliquid accusantium modi tempora nisi? Esse facilis omnis labore nemo animi placeat voluptas.</p>
          <div class="icon">
              <a href="#"><i class="fa fa-clock"> 21 September 2023</i></a>
@@ -356,10 +356,10 @@
      </div>
      <div class="box">
         <div class="image">
-         <img src="images/blog-3.jpg" alt="">
+         <img src="images/raden (2).png" alt="">
         </div>
         <div class="content">
-         <a href="#" class="link">Agus Sucipto, S.KM.</a>
+         <a href="#" class="link">Dhynda Anggyawaty, S.A.P.</a>
          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium provident, autem repellat nesciunt vero facere debitis placeat, aliquid accusantium modi tempora nisi? Esse facilis omnis labore nemo animi placeat voluptas.</p>
          <div class="icon">
              <a href="#"><i class="fa fa-clock"> 21 September 2023</i></a>
