--- a/index.html
+++ b/index.html
@@ -334,10 +334,10 @@
         </div>
       <div class="content">
           <a href="#" class="link">Raden Gani Muhammad, S.H., M.AP.</a>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium provident, autem repellat nesciunt vero facere debitis placeat, aliquid accusantium modi tempora nisi? Esse facilis omnis labore nemo animi placeat voluptas.</p>
+          <p>Peran seorang Wali Kota dalam aksi perubahan sangat penting, dan mereka memiliki tanggung jawab strategis untuk memastikan keberhasilan dan keberlanjutan perubahan di tingkat pemerintahan kota.</p>
           <div class="icon">
-              <a href="#"><i class="fa fa-clock"> 21 September 2023</i></a>
-              <a href="#"><i class="fa fa-user"> Wali Kota Bekasi</i></a>
+              <a href="#"><i class="fa fa-star"> </i></a>
+              <a href="#"><i class="fa fa-user"> Pj. Wali Kota Bekasi</i></a>
           </div>
       </div>
      </div>
@@ -349,8 +349,8 @@
          <a href="#" class="link">Agus Sucipto, S.KM.</a>
          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium provident, autem repellat nesciunt vero facere debitis placeat, aliquid accusantium modi tempora nisi? Esse facilis omnis labore nemo animi placeat voluptas.</p>
          <div class="icon">
-             <a href="#"><i class="fa fa-clock"> 21 September 2023</i></a>
-             <a href="#"><i class="fa fa-user"> Camat Jatiasih</i></a>
+             <a href="#"><i class="fa fa-star"> </i></a>
+             <a href="#"><i class="fa fa-user"> Lurah Jatisari</i></a>
          </div>
      </div>
      </div>
@@ -362,8 +362,8 @@
          <a href="#" class="link">Dhynda Anggyawaty, S.A.P.</a>
          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium provident, autem repellat nesciunt vero facere debitis placeat, aliquid accusantium modi tempora nisi? Esse facilis omnis labore nemo animi placeat voluptas.</p>
          <div class="icon">
-             <a href="#"><i class="fa fa-clock"> 21 September 2023</i></a>
-             <a href="#"><i class="fa fa-user"> Lurah Jatisari</i></a>
+             <a href="#"><i class="fa fa-star"> </i></a>
+             <a href="#"><i class="fa fa-user"> Kasi Permasbang</i></a>
          </div>
      </div>
      </div>
