--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 <div class="box-container">
     <div class="box">
         <div class="image">
-         <img src="images/raden (1).png" alt="">
+         <img src="images/raden.png" alt="">
         </div>
       <div class="content">
           <a href="#" class="link">Raden Gani Muhammad, S.H., M.AP.</a>
@@ -343,7 +343,7 @@
      </div>
      <div class="box">
         <div class="image">
-         <img src="images/raden (3).png" alt="">
+         <img src="images/agus.png" alt="">
         </div>
         <div class="content">
          <a href="#" class="link">Agus Sucipto, S.KM.</a>
@@ -356,7 +356,7 @@
      </div>
      <div class="box">
         <div class="image">
-         <img src="images/raden (2).png" alt="">
+         <img src="images/dhynda.png" alt="">
         </div>
         <div class="content">
          <a href="#" class="link">Dhynda Anggyawaty, S.A.P.</a>
