--- a/index.html
+++ b/index.html
@@ -324,8 +324,8 @@
 <!-- Blogs Section ends -->
 <section class="blogs" id="blogs">
     <div class="heading">
-        <span>Dukungan & Testimoni</span>
-        <h1>Terhadap SIDINDA PBB</h1>
+        <span>Tim</span>
+        <h1>SIDINDA PBB</h1>
     </div>
 <div class="box-container">
     <div class="box">
