--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 <div class="box-container">
     <div class="box">
         <div class="image">
-         <img src="images/raden-2.jpeg" alt="">
+         <img src="images/raden-2.png" alt="">
         </div>
       <div class="content">
           <a href="#" class="link">Raden Gani Muhammad, S.H., M.AP.</a>
