--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         </div>
         <div class="content">
          <a href="#" class="link">Agus Sucipto, S.KM.</a>
-         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium provident, autem repellat nesciunt vero facere debitis placeat, aliquid accusantium modi tempora nisi? Esse facilis omnis labore nemo animi placeat voluptas.</p>
+         <p>Peran seorang Mentor dalam implementasi SIDINDA PBB (Sistem Deteksi Dini Pendataan dan Pelayanan Pajak Bumi dan Bangunan) sangat krusial untuk memberikan bimbingan, dukungan, dan pengembangan kepada tim yang terlibat dalam aksi perubahan.</p>
          <div class="icon">
              <a href="#"><i class="fa fa-star"> </i></a>
              <a href="#"><i class="fa fa-user"> Lurah Jatisari</i></a>
@@ -360,7 +360,8 @@
         </div>
         <div class="content">
          <a href="#" class="link">Dhynda Anggyawaty, S.A.P.</a>
-         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium provident, autem repellat nesciunt vero facere debitis placeat, aliquid accusantium modi tempora nisi? Esse facilis omnis labore nemo animi placeat voluptas.</p>
+         <p>
+Sebagai Action Leader dalam implementasi SIDINDA PBB (Sistem Deteksi Dini Pendataan dan Pelayanan Pajak Bumi dan Bangunan), seseorang memiliki peran utama dalam memimpin, mengkoordinasikan, dan memastikan kesuksesan seluruh aksi perubahan.</p>
          <div class="icon">
              <a href="#"><i class="fa fa-star"> </i></a>
              <a href="#"><i class="fa fa-user"> Kasi Permasbang</i></a>
@@ -378,10 +379,10 @@
             <a href="#" class="logo"><i class="fas fa-paper-plane"></i>SIDINDA PBB</a>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium, pariatur neque explicabo consequuntur fuga architecto harum exercitationem modi, aliquam nisi consequatur sunt tempora ipsa quos unde, nulla excepturi? Sapiente, numquam!</p>
             <div class="share">
-                <a href="#" class="fab fa-facebook-f"></a>
-                <a href="#" class="fab fa-twitter"></a>
-                <a href="#" class="fab fa-instagram"></a>
-                <a href="#" class="fab fa-linkedin"></a>
+                <a href="https://www.facebook.com/photo?fbid=122094841292152816&set=a.122094841310152816" class="fab fa-facebook-f"></a>
+                <a href="https://twitter.com/sidindapbb/status/1733151944687133026/photo/1" class="fab fa-twitter"></a>
+                <a href="https://www.instagram.com/p/C0mPx2eJUFY/?next=%2F" class="fab fa-instagram"></a>
+                <a href="https://youtu.be/JkRwtIqQcCM?si=ax6AktXafjzf6VRQ" class="fab fa-youtube"></a>
                 <!-- <a href="#" class="fab fa-facebook-f"></a> -->
             </div>
         </div>
@@ -394,7 +395,7 @@
         </div>
         <div class="box">
             <p><i class="fas fa-map"></i>Jatisari, Jatiasih, Kota Bekasi</p>
-            <p><i class="fas fa-phone"></i>+123-456-789</p>
+            <p><i class="fas fa-phone"></i>-</p>
             <p><i class="fas fa-envelope"></i>permasbangjatisari@gmail.com</p>
             <p><i class="fas fa-envelope"></i>07:00am - 10:00pm</p>
         </div>
