--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <div class="content" data-aos="fade-left" data-aos-delay="600">
         <span>Apa itu</span>
         <h3>SIDINDA PBB?</h3>
-        <p>SIDINDA PBB yang merupakan singkatan dari "Deteksi Dini Pendataan Pajak Bumi dan Bangunan" adalah Inovasi Pelayanan Publik yang digagas oleh Ibu Dhynda Anggyawaty selaku Kepala Seksi Pemberdayaan Masyarakat dan Pembangunan Kelurahan Jatisari dan dimentori oleh Bapak Agus Sucipto selaku Lurah Jatisari Kecamatan Jatiasih Kota Bekasi untuk membantu melayani masyarakat terkait Pajak Bumi dan Bangunannya agar terwujudnya pelayanan yang profesional, cepat, tepat, dan akuntabel.</p>
+        <p>SIDINDA PBB (Deteksi Dini Pendataan dan Pelayanan Pajak Bumi dan Bangunan) adalah sebuah sistem yang dirancang untuk mendeteksi secara dini permasalahan dalam pendataan dan pelayanan Pajak Bumi dan Bangunan (PBB). Sistem ini mengintegrasikan teknologi informasi dan komunikasi dengan proses administrasi perpajakan untuk meningkatkan efisiensi, akurasi, dan kualitas layanan terkait pajak bumi dan bangunan. Ini merupakan aksi perubahan yang digagas oleh Ibu Dhynda Anggyawaty selaku Kepala Seksi Pemberdayaan Masyarakat dan Pembangunan Kelurahan Jatisari dan dimentori oleh Bapak Agus Sucipto selaku Lurah Jatisari dalam rangka Pelatihan Kepemimpinan Pengawas Angkatan VIII Tahun 2023 yang diselenggarakan oleh BPSDM Provinsi Jawa Barat.</p>
         <a href="#" class="btn">Read more</a>
     </div>
 </section>
@@ -377,7 +377,7 @@ Sebagai Action Leader dalam implementasi SIDINDA PBB (Sistem Deteksi Dini Pendat
     <div class="box-container">
         <div class="box">
             <a href="#" class="logo"><i class="fas fa-paper-plane"></i>SIDINDA PBB</a>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium, pariatur neque explicabo consequuntur fuga architecto harum exercitationem modi, aliquam nisi consequatur sunt tempora ipsa quos unde, nulla excepturi? Sapiente, numquam!</p>
+            <p>Penerapan SIDINDA PBB biasanya merupakan bagian dari upaya modernisasi administrasi perpajakan untuk menjawab tuntutan akan layanan yang lebih cepat, akurat, dan terintegrasi. Sistem ini dapat memberikan dampak positif pada efisiensi administratif, keadilan perpajakan, dan kualitas layanan yang diberikan kepada masyarakat.</p>
             <div class="share">
                 <a href="https://www.facebook.com/photo?fbid=122094841292152816&set=a.122094841310152816" class="fab fa-facebook-f"></a>
                 <a href="https://twitter.com/sidindapbb/status/1733151944687133026/photo/1" class="fab fa-twitter"></a>
